.artifacts_history/dev/20260224_070404/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-namespace
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
