.artifacts_history/dev/20260224_070404/k8s/backend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: my-namespace
spec:
  egress:
  - ports:
    - 53
    protocol: UDP
    to:
    - podSelector: {}
  - ports:
    - 53
    protocol: TCP
    to:
    - podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    - ports:
      - 8080
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
